현재상테로 영문 소개 페이지 레이아웃을 잡습니다.

--- a/layouts/partials/base/header-ww.html
+++ b/layouts/partials/base/header-ww.html
@@ -6,7 +6,7 @@
           <a href="/">KR</a> 
         </li>
         <li class="rounded-full px-4 py-2 text-white bg-aa-purple-500 hover:bg-white hover:text-aa-gray-900 text-sm">
-          <a href="/guide/en-information">EN</a> 
+          <a href="/guide/en-introduction/">EN</a> 
         </li>
         <li class="rounded-full px-4 py-2 text-white bg-aa-purple-500 hover:bg-white hover:text-aa-gray-900 text-sm">
           <a href="/guide/jp-information">日語</a>
@@ -95,7 +95,7 @@
             <a href="/">KO</a> <span class="mx-2">|</span>
           </li>
           <li>
-            <a href="/guide/en-information">ENG</a><span class="mx-2">|</span>
+            <a href="/guide/en-introduction/">ENG</a><span class="mx-2">|</span>
           </li>
           <li>
             <a href="/guide/jp-information">日本語</a><span class="mx-2">|</span>
