--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,43 +7,23 @@
   <div class="contents-area" id="main-content">
       {{/* 슬라이드 배너 홈페이지용 */}}
       {{ partial "marketing/banner--ww--slide" . }}
-      
-      {{/* 정의기억연대 현안 */}}
+ 
+      {{/* 정의기억연대 현안 contents/issues */}}
       <section class="container py-24 text-gray-600 body-font">
         <div class="flex sm:-m-4 -mx-4 -mb-10 -mt-4 pb-12">
+          {{ range where (where .Site.RegularPages "Type" "issues") "Params.home_sticky" true }}
           <div class="flex-wrap p-4 md:w-1/3 sm:w-full sm:mb-0 mb-6">
             <div class="h-64 overflow-hidden">
-              <img alt="content" class="object-cover object-center h-full w-full" src="https://media.womenandwar.net/web/img/후원의밤.jpg">
+              <img alt="content" class="object-cover object-center h-full w-full" src="{{ .Params.Image }}">
             </div>
-            <h2 class="text-xl font-medium title-font text-gray-900 mt-5">일본군성노예제 문제해결운동 32주년 기념 '2022 정의기억연대 후원의 밤'이 진행</h2>
-            <a class="text-lg text-aa-purple-500 inline-flex items-center pt-2" href="/comfort-women/meanings/">더 알아보기
+            <h2 class="text-xl font-medium title-font text-gray-900 mt-5">{{ .Title }}</h2>
+            <a class="text-lg text-aa-purple-500 inline-flex items-center pt-2" href="{{ .Params.button_url }}">{{ .Params.button_name }}
               <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                   <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
               </svg>
             </a>
           </div>
-          <div class="flex-wrap p-4 md:w-1/3 sm:w-full sm:mb-0 mb-6">
-            <div class="rounded-none h-64 overflow-hidden">
-              <img alt="content" class="object-cover object-center h-full w-full" src="https://media.womenandwar.net/web/img/photo_2022-10-14_14-13-32.jpg">
-            </div>
-            <h2 class="text-xl font-medium title-font text-gray-900 mt-5">피해자 보호법 개정 서명운동 [긴급 서명 요청] 일본군'위안부' 피해자에 대한 명예훼손을 막아주세요!</h2>
-            <a class="text-lg text-aa-purple-500 inline-flex items-center pt-2" href="/about/greetings/">서명하러 가기
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-                  <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
-              </svg>
-            </a>
-          </div>
-          <div class="flex-wrap p-4 md:w-1/3 sm:w-full sm:mb-0 mb-6">
-            <div class="rounded-none h-64 overflow-hidden">
-              <img alt="content" class="object-cover object-center h-full w-full" src="https://media.womenandwar.net/web/img/첫수요집회 사본.jpg">
-            </div>
-            <h2 class="text-xl font-medium title-font text-gray-900 mt-5">수요시위에 참여해주세요 !! </h2>
-            <a class="text-lg text-aa-purple-500 inline-flex items-center pt-2" href="/about/greetings/">더 알아보기
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-                  <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
-              </svg>
-            </a>
-          </div>
+          {{ end }}
         </div>
       </section>
 
