--- a/layouts/categories/terms.html
+++ b/layouts/categories/terms.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<!-- terms.html(다크모드 작업) 에 수정합니다. categories tags 화면 -->
+<!-- terms.html categories tags -->
 <section class="text-gray-900 bg-white dark:text-gray-100 dark:bg-gray-900 body-font">
   <div class="px-5 p-24 mx-auto">
     <div class="flex flex-col text-center w-full">
@@ -8,11 +8,11 @@
     </div>
   </div>
 </section>
-<section class="text-gray-900 bg-gray-100 dark:text-gray-100 dark:bg-gray-800 body-font">
+<section class="text-gray-900 bg-gray-100 dark:text-gray-100 dark:bg-gray-800 body-font z-0">
   <div class="container px-5 py-24 mx-auto">
     <div class="flex flex-wrap -m-4">
       {{ $type := .Type }}
-      {{ range $key, $value := .Data.Terms.ByCount }}
+      {{ range $key, $value := .Data.Terms.Alphabetical }}
         {{ $name := .Name }}
         {{ $count := .Count }}
         {{ with $.Site.GetPage (printf "/%s/%s" $type $name) }}
@@ -20,7 +20,7 @@
           <div class="flex relative">
             <div class="p-4 rounded relative z-10 w-full border-4 border-gray-100 bg-white dark:border-gray-700 dark:bg-gray-900">  
               <div>
-                <svg xmlns="https://www.w3.org/2000/svg" class="h-12 w-12 text-blue-600 dark:text-blue-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <svg xmlns="https://www.w3.org/2000/svg" class="h-12 w-12 text-aa-purple-500 dark:text-aa-purple-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 7v10a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-6l-2-2H5a2 2 0 00-2 2z" />
                 </svg>
               </div>
@@ -28,7 +28,7 @@
               {{ if .Params.Description }}
                 <p class="text-sm leading-relaxed">{{ .Params.Description }}</p>
               {{ else }}  
-                <p class="leading-relaxed text-blue-600 dark:text-blue-500">{{ printf "%d" $count }}개의 아이템 &#xb7; <a class="text-blue-600 dark:text-blue-500 underline" href="{{ .Permalink }}">더 보기</a></p>
+                <p class="leading-relaxed text-aa-purple-500 dark:text-aa-purple-500">{{ printf "%d" $count }}개의 글 &#xb7; <a class="text-blue-600 dark:text-blue-500 underline" href="{{ .Permalink }}">더 보기</a></p>
               {{ end }} 
             </div>                    
           </div>
