--- a/layouts/partials/base/header-ww.html
+++ b/layouts/partials/base/header-ww.html
@@ -9,7 +9,7 @@
           <a href="/guide/en-introduction/">EN</a> 
         </li>
         <li class="rounded-full px-4 py-2 text-white bg-aa-purple-500 hover:bg-white hover:text-aa-gray-900 text-sm">
-          <a href="/guide/jp-information">日語</a>
+          <a href="/guide/jp-introduction">日語</a>
         </li>
         <li class="rounded-full px-4 py-2 text-white bg-aa-purple-500 hover:bg-white hover:text-aa-gray-900 text-sm">
           <a href="https://womenandwarmuseum.net/" target="_blank">전쟁과여성인권박물관</a>
@@ -98,7 +98,7 @@
             <a href="/guide/en-introduction/">ENG</a><span class="mx-2">|</span>
           </li>
           <li>
-            <a href="/guide/jp-information">日本語</a><span class="mx-2">|</span>
+            <a href="/guide/jp-introduction">日語</a><span class="mx-2">|</span>
           </li>
           <li>
             <a href="https://womenandwarmuseum.net/" target="_blank">전쟁과여성인권박물관</a>
