데이터 이름을 변경합니다.-조직연혁

--- a/layouts/shortcodes/about/history.html
+++ b/layouts/shortcodes/about/history.html
@@ -2,7 +2,7 @@
 <div class="container px-5 py-5 mx-auto">
     <div class="flex flex-wrap -m-4">
         <div class="w-full pt-4">
-                {{ with .정의연연혁 }}
+                {{ with .정의기억연대연혁 }}
                 <h2 class="lg:w-2/5 flex-shrink-0 text-aa-purple-500 text-4xl font-bold leading-tight mb-4 pt-12">{{ .title }}</h2>
                 <div class="lg:flex justify-center py-6">
                     <div class="mb-20">
