연혁 & 조직과 사람들 수정

--- a/layouts/shortcodes/about/organization.html
+++ b/layouts/shortcodes/about/organization.html
@@ -1,7 +1,7 @@
 <div class="bg-white py-14 lg:px-64 px-4">
     <h2 class="text-aa-gray-700 text-5xl font-bold mb-14">조직</h2>
     <div class="mb-14">
-        <img class="w-full" src="{{ .Site.Params.bucketHostname }}/web/img/210603_조직도-001.png" alt="2021년 정의기억연대 조직도">
+        <img class="w-full" src="{{ .Site.Params.bucketHostname }}/web/img/조직도-2023.png" alt="2023년 정의기억연대 조직도">
     </div>
     <h2 class="text-aa-gray-700 text-5xl font-bold mt-14 mb-14">임원</h2>
     <table class="table-auto border-collapse border-aa-gray-800 mb-14 w-full text-center">
